kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: killer-terrier-sp-generic-web
  labels:
    app: devwhoops
    team: whoops
    release: v1
    os: "linux"
    app.kubernetes.io/name: sp-generic-web
    helm.sh/chart: sp-generic-web-1.0.7
    app.kubernetes.io/instance: killer-terrier
    app.kubernetes.io/managed-by: Tiller
    heritage: Tiller
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort:  80
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
  selector:
    app.kubernetes.io/name: sp-generic-web
    app.kubernetes.io/instance: killer-terrier
    os: "linux"
